--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/zig-ansi-term"]
 	path = src/zig-ansi-term
 	url = https://github.com/ziglibs/zig-ansi-term
+[submodule "src/zig-wcwidth"]
+	path = src/zig-wcwidth
+	url = https://github.com/joachimschmidt557/zig-wcwidth
